--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "offersdb",
   "version": "1.0.0",
   "description": "Offers Dashboard",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +15,9 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/anjalisingh/offersdb#readme",
   "dependencies": {
-    "express": "^4.13.1"
+    "express": "^4.13.1",
+    "jade": "1.1.5",
+    "mongodb":"1.3.23",
+    "body-parser": "1.8"
   }
 }
