--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/anjalisingh/offersdb#readme",
   "dependencies": {
-    "morgan": "~1.5.0",
-    "express": "~4.10.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.9.3",
+    "express": "~4.10.3",
+    "jsonwebtoken": "^5.0.5",
     "mongoose": "~3.8.19",
-    "bcrypt-nodejs": "0.0.3"
+    "morgan": "~1.5.0"
   }
 }
